tests/errors/phantom-event.fil
import "primitives/core.fil";

component main<G>(
    @interface[G, G+1] @phantom go: 1,
    @[G, G+1] left: 32,
) -> () {
    r := new Register[32]<G, G+2>(left);
}